--- a/style.css
+++ b/style.css
@@ -17,6 +17,17 @@ body {
   font-size: 20vh;
 }
 
+#info {
+  position: absolute;
+  bottom: 0;
+  color: #fff;
+}
+
+#info > * {
+  margin: 0;
+  padding: 0;
+}
+
 /*.row > * {
   background-color: #222;
 }*/
