Added and integrated custom font RomanSerif

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+@font-face { font-family: RomanSerif; src: url('fonts/RomanSerif.ttf'); }
+@font-face { font-family: RomanSerif; font-style: oblique; src: url('fonts/RomanSerif-Oblique.ttf'); }
+
 body {
-  /*font-family: 'Times New Roman';*/
+  font-family: RomanSerif, serif;
+  /*font-style: oblique;*/
   background-color: #050508;
   color: white;
   width: 100%;
