Added lineheight attribute in css to fix Chrome bug.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  top: 0;
 }
 
 #wrapper {
@@ -23,11 +24,12 @@ body {
 }
 
 span {
-  /*background-color: #222;*/
+  background-color: #222;
   display: inline-block;
   padding: 0;
   margin: 0;
   font-size: 20vh;
+  line-height: 20vh;
 }
 
 #info {
