--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 span {
-  background-color: #222;
+  /*background-color: #222;*/
   display: inline-block;
   padding: 0;
   margin: 0;
